# Malaria_detection

./: Cargo.toml  code.md
src/: data.rs  main.rs  metrics.rs  model.rs  trainer.rs
