[package]
name = "Burn_model"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.19.1", features = ["std", "train", "ndarray", "autodiff"], default-features = false }
burn-ndarray = "0.19.1"
image = "0.25.9"
rand = "0.9"
rayon = "1.10"  # NOUVEAU: Parallélisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
env_logger = "0.11"
chrono = "0.4"
burn-train = "0.19.1"
parking_lot = "0.12.5"
tokio = "1.48.0"
log = "0.4.29"
thiserror = "2.0.17"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
