[package]
name = "Burn_model"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.19.1", features = ["train", "ndarray", "autodiff"] }
burn-ndarray = "0.19.1"
burn-train = "0.19.1"

image = "0.25.9"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"

[profile.release]
opt-level = 3
codegen-units = 1
strip = true